--- a/Linal_wk1/MainWindow.xaml
+++ b/Linal_wk1/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Linal_wk1"
         mc:Ignorable="d"
-        Title="MainWindow" Height="960" Width="1200">
+        Title="MainWindow" Height="960" Width="1200" KeyDown="Window_KeyDown">
     <Grid Margin="0,0,-129,-51">
         <Canvas  Name="Assenstelsel" HorizontalAlignment="Center" VerticalAlignment="Center"
           Width="700" Height="700" MouseLeftButtonDown="Assenstelsel_MouseLeftButtonDown" Margin="54,42,567,238">
