--- a/Linal_wk1/MainWindow.xaml
+++ b/Linal_wk1/MainWindow.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="960" Width="1200" KeyDown="Window_KeyDown">
     <Grid Margin="0,0,-129,-51">
-        <Canvas  Name="Assenstelsel" HorizontalAlignment="Center" VerticalAlignment="Center"
+        <Canvas  Name="Assenstelsel"
           Width="700" Height="700" MouseLeftButtonDown="Assenstelsel_MouseLeftButtonDown" Margin="54,42,567,238">
             <Canvas.LayoutTransform>
                 <ScaleTransform ScaleX="1" ScaleY="-1" CenterX="0" CenterY="0" />
