--- a/Linal_wk1/MainWindow.xaml
+++ b/Linal_wk1/MainWindow.xaml
@@ -9,7 +9,7 @@
         Title="MainWindow" Height="960" Width="1200" KeyDown="Window_KeyDown">
     <Grid Margin="0,0,-129,-51">
         <Canvas  Name="Assenstelsel"
-          Width="700" Height="700" MouseLeftButtonDown="Assenstelsel_MouseLeftButtonDown" Margin="54,42,567,238">
+          Width="850" Height="850" Margin="54,42,567,238">
             <Canvas.LayoutTransform>
                 <ScaleTransform ScaleY="-1" />
             </Canvas.LayoutTransform>
@@ -28,67 +28,7 @@
                 </DrawingBrush>
             </Canvas.Background>
         </Canvas>
-        <Label x:Name="label" Content="Selected vector" HorizontalAlignment="Left" Margin="61,771,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="labelScale"  HorizontalAlignment="Left" Content="ScaleX" Margin="61,803,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtScaleX" HorizontalAlignment="Left" Height="23" Margin="160,806,0,0" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="scaleVector" Content="Scale Vector" HorizontalAlignment="Left" Margin="61,865,0,0" VerticalAlignment="Top" Width="102" Height="23" Click="scaleVector_Click"/>
-
-        <Label x:Name="labelXLine" HorizontalAlignment="Left" Margin="96,743,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="labelXLine2" HorizontalAlignment="Left" Margin="540,743,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="label1" Content="0" HorizontalAlignment="Left" Margin="34,745,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.688,0.346"/>
-        <Label x:Name="labelYLine" HorizontalAlignment="Left" Margin="10,33,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.688,0.346"/>
-        <Label x:Name="labelScale_Copy"  HorizontalAlignment="Left" Content="ScaleY" Margin="61,826,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txtScaleY" HorizontalAlignment="Left" Height="23" Margin="160,829,0,0" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="AddVector" Content="Add Selected Vectors" HorizontalAlignment="Left" Margin="168,865,0,0" VerticalAlignment="Top" Width="149" Height="23" Click="AddVector_Click" />
-        <Label x:Name="label2" Content="Vectors" HorizontalAlignment="Left" Margin="0,826,0,0" VerticalAlignment="Top"/>
-        <Border CornerRadius="6" BorderBrush="Black" BorderThickness="2" Margin="820,33,201,597" Padding="5,0,0,0" >
-            <ScrollViewer>
-                <StackPanel Orientation="Vertical" HorizontalAlignment="Left" Width="236" Margin="0,0,0,8">
-                    <StackPanel Orientation="Horizontal"/>
-                    <StackPanel Orientation="Horizontal"/>
-                    <StackPanel Orientation="Horizontal"/>
-                    <StackPanel Orientation="Horizontal"/>
-                    <StackPanel Orientation="Horizontal">
-                        <Label Content="Scale X:"></Label>
-                        <TextBox Name="ScaleMatrixX" Width="180"></TextBox>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <Label Content="Scale Y:"></Label>
-                        <TextBox Name="ScaleMatrixY" Width="180"></TextBox>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <Label Content="Translate X:"></Label>
-                        <TextBox Name="translateMatrixX" Width="160"></TextBox>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <Label Content="Translate Y:"></Label>
-                        <TextBox Name="TranslateMatrixY" Width="160"></TextBox>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <Label Content="Rotate:       "></Label>
-                        <TextBox Name="RotateText" Width="160"></TextBox>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <Label Content="Rotate X point:       "></Label>
-                        <TextBox Name="RotateSpecificX" Width="120"></TextBox>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <Label Content="Rotate Y Point:       "></Label>
-                        <TextBox Name="RotateSpecificY" Width="121"></TextBox>
-                    </StackPanel>
-                </StackPanel>
-            </ScrollViewer>
-        </Border>
-        <Label x:Name="label2_Copy" Content="Matrix 2D" HorizontalAlignment="Left" Margin="822,2,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="ScaleMatrix" Content="Scale selected Matrix" HorizontalAlignment="Left" Margin="822,225,0,0" VerticalAlignment="Top" Width="149" RenderTransformOrigin="0.49,-0.15" Click="ScaleMatrix_Click" />
-        <Button x:Name="RotateMatrix" Content="Rotate selected Matrix" HorizontalAlignment="Left" Margin="822,250,0,0" VerticalAlignment="Top" Width="289" RenderTransformOrigin="0.49,-0.15" Click="RotateMatrix_Click"/>
-        <Button x:Name="RotateSpecificPoint" Content="Rotate selected Matrix on specific point" HorizontalAlignment="Left" Margin="822,275,0,0" VerticalAlignment="Top" Width="289" RenderTransformOrigin="0.49,-0.15" Click="RotateSpecificPoint_Click"/>
-        <Button x:Name="TranslateMatrix" Content="Translate selected Matrix" HorizontalAlignment="Left" Margin="976,225,0,0" VerticalAlignment="Top" Width="135" RenderTransformOrigin="0.49,-0.15" Click="TranslateMatrix_Click"/>
-        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="122" Margin="52,771,0,0" VerticalAlignment="Top" Width="276"/>
-        <Button x:Name="Animate" Content="Animate" HorizontalAlignment="Left" Margin="822,300,0,0" VerticalAlignment="Top" Width="289" RenderTransformOrigin="0.49,-0.15" Click="Animate_Click"/>
-        <Button x:Name="StopAnimate" Content="Stop animating" HorizontalAlignment="Left" Margin="822,325,0,0" VerticalAlignment="Top" Width="289" RenderTransformOrigin="0.49,-0.15" Click="StopAnimate_Click" />
-        <Button x:Name="StopAnimateAll" Content="Stop animating everything" HorizontalAlignment="Left" Margin="822,350,0,0" VerticalAlignment="Top" Width="289" RenderTransformOrigin="0.49,-0.15" Click="StopAnimateAll_Click"/>
-        <Label x:Name="label2_Copy1" Content="Matrix 3D" HorizontalAlignment="Left" Margin="822,399,0,0" VerticalAlignment="Top"/>
-
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="850" Margin="921,42,0,0" VerticalAlignment="Top" Width="250"/>
+        <Label x:Name="label" Content="Kubus" HorizontalAlignment="Left" Margin="921,11,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Window>
