--- a/Linal_wk1/MainWindow.xaml
+++ b/Linal_wk1/MainWindow.xaml
@@ -37,10 +37,10 @@
                         <Label x:Name="label" FontSize="16" Content="Le Kubus" HorizontalAlignment="Left" VerticalAlignment="Top"/>
                         <Border CornerRadius="6" BorderBrush="Black" BorderThickness="2" HorizontalAlignment="Left" Height="500" VerticalAlignment="Top" Width="250">
                             <StackPanel Orientation="Vertical">
-                                <Label Content="Rotate Over" FontSize="14"/>
+                                <Label Content="Rotate Le Kubus Over" FontSize="14"/>
                                 <Label Content="Point 1:" FontSize="12"/>
-                                <StackPanel Orientation="Horizontal">
-                                    <Label Content="X:" Margin="25,0,0,0"/>
+                                <StackPanel Orientation="Horizontal" Margin="25,0,0,0">
+                                    <Label Content="X:"/>
                                     <TextBox x:Name="txtPnt1X" MaxLength="4" TextAlignment="Center" VerticalContentAlignment="Center" Width="40" Text="{Binding Path=Point1X, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
                                     <Label Content="Y:" Margin="10,0,0,0"/>
                                     <TextBox x:Name="txtPnt1Y" MaxLength="4" TextAlignment="Center" VerticalContentAlignment="Center" Width="40" Text="{Binding Path=Point1Y, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
@@ -49,20 +49,26 @@
                                 </StackPanel>
                                 
                                 <Label Content="Point 2:" FontSize="12"/>
-                                <StackPanel Orientation="Horizontal">
-                                    <Label Content="X:" Margin="25,0,0,0"/>
+                                <StackPanel Orientation="Horizontal" Margin="25,0,0,0">
+                                    <Label Content="X:"/>
                                     <TextBox x:Name="txtPnt2X" MaxLength="4" TextAlignment="Center" VerticalContentAlignment="Center" Width="40" Text="{Binding Path=Point2X, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
                                     <Label Content="Y:" Margin="10,0,0,0"/>
                                     <TextBox x:Name="txtPnt2Y" MaxLength="4" TextAlignment="Center" VerticalContentAlignment="Center" Width="40" Text="{Binding Path=Point2Y, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
                                     <Label Content="Z:" Margin="10,0,0,0"/>
                                     <TextBox x:Name="txtPnt2Z" MaxLength="4" TextAlignment="Center" VerticalContentAlignment="Center" Width="40" Text="{Binding Path=Point2Z, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
                                 </StackPanel>
-                                <StackPanel Orientation="Horizontal" Margin="0,25,0,0">
+                                <StackPanel Orientation="Horizontal" Margin="0,25,0,25">
                                     <Label Content="Degrees:"/>
                                     <TextBox x:Name="rotateDegrees" MaxLength="2" MaxLines="1" TextAlignment="Center" VerticalContentAlignment="Center" Width="25" Text="{Binding Path=Degrees, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
                                 </StackPanel>
+                                <Label Content="Move Le Kubus" FontSize="14" HorizontalAlignment="Left" />
+                                <StackPanel Orientation="Horizontal">
+                                    <Label Content="Speed:"/>
+                                    <TextBox x:Name="translateSpeed" MaxLength="2" MaxLines="1" TextAlignment="Center" VerticalContentAlignment="Center" Width="25" Text="{Binding Path=Speed, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"></TextBox>
+                                </StackPanel>
                                 
-                                <Label Content="Press S to rotate!" FontSize="22" HorizontalAlignment="Center" Margin="0,50,0,0"/>
+                                <Label Content="Press S to rotate" FontSize="22" HorizontalAlignment="Center" Margin="0,50,0,0"/>
+                                <Label Content="WASD to move" FontSize="18" HorizontalAlignment="Center" Margin="0,10,0,0"/>
 
                             </StackPanel>
                         </Border>
