--- a/Linal_wk1/MainWindow.xaml
+++ b/Linal_wk1/MainWindow.xaml
@@ -54,7 +54,10 @@
                                 </StackPanel>
                                 
                                 <Label Content="Press S to rotate" FontSize="22" HorizontalAlignment="Center" Margin="0,50,0,0"/>
-                                    <Label Content="WASDQE to move" FontSize="18" HorizontalAlignment="Center" Margin="0,10,0,0"/>
+                                <Label Content="WASDQE to move" FontSize="18" HorizontalAlignment="Center" Margin="0,10,0,0"/>
+                                <Label Content="substract/add to modify vectoreye" FontSize="15" HorizontalAlignment="Center" Margin="0,10,0,0"/>
+                                <Label Content="up/down to modify vector lookat" FontSize="15" HorizontalAlignment="Center" Margin="0,10,0,0"/>
+
                             </StackPanel>
                         </Border>
                     </StackPanel>
